C1880: Fixed bug on logo as this element was centered and covering the help link

--- a/Components/main-brand/chrome-and-content/scss/_logo.scss
+++ b/Components/main-brand/chrome-and-content/scss/_logo.scss
@@ -26,7 +26,8 @@
             padding: map_get($options, "desktop-padding");
         }
         img{
-            width: 100%;
+            width: auto;
+            max-width: 100%;
             height: 100%;
             margin: 0 auto;
             &.black-logo{
